Make content widget labels more vibrant using vibrancy effect.

Bug: 757439
Change-Id: Ia84d676d2f32ca6f8894426ce3a1a88ab99007cf